Various dark mode fixes (#308)

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -311,12 +311,12 @@ html.dark-mode ._33p7 {
 html.dark-mode ._33p7 ._b-u,
 html.dark-mode ._33p7 ._b-v {
 	background-color: transparent !important;
-	background-image: url(/rsrc.php/v3/yb/r/TF9SFeEl2Ka.png) !important;
+	background-image: url(https://static.xx.fbcdn.net/rsrc.php/v3/yG/r/CV3cVGSAcf3.png) !important;
 	background-repeat: no-repeat !important;
 	background-size: auto !important;
 }
 html.dark-mode ._33p7 ._b-u {
-	background-position: 0px -66px !important;
+	background-position: 0 -42px !important;
 }
 html.dark-mode ._33p7 ._b-v {
 	background-position: 0 0 !important;
@@ -333,7 +333,7 @@ html.dark-mode ._33p7 ._5iwn ._58ak::before {
 /* Poll */
 /* Border */
 html.dark-mode ._3b4t {
-	border-color: --base-nine;
+	border-color: var(--base-nine);
 }
 /* "Poll" header text */
 html.dark-mode ._4qba {
@@ -354,7 +354,7 @@ html.dark-mode ._58al {
 }
 /* Poll results bar graph colors */
 html.dark-mode ._3b4h {
-	background-color: --base-nine;
+	background-color: var(--base-nine);
 }
 /* Poll results profile pictures */
 html.dark-mode ._4mnq {
@@ -362,7 +362,39 @@ html.dark-mode ._4mnq {
 }
 html.dark-mode ._34n6 {
 	color: var(--base-fourty);
-	background-color: --base-nine;
+	background-color: var(--base-nine);
+}
+
+/* Message reaction buttons */
+html.dark-mode ._aou,
+html.dark-mode ._4kf5 {
+	background-color: var(--conversation-bg);
+}
+
+/* Message action buttons */
+html.dark-mode ._3erg ._hh7 a._2q1l,
+html.dark-mode ._2f5n {
+	background-color: var(--container-color);
+}
+
+/* Bot quick-reply buttons */
+html.dark-mode ._3u69 {
+	background: var(--container-color) !important;
+}
+
+/* Bot quick-reply button border */
+html.dark-mode ._36wf {
+    border: 1px solid var(--base-five) !important;
+}
+
+/* Bot card title */
+html.dark-mode ._3cn0 {
+	color: var(--base-seventy);
+}
+
+/* Bot card content */
+html.dark-mode ._3cnl, ._3cnn a, ._3cnj {
+	color: var(--base-fourty);
 }
 
 /* Dialogs */
@@ -378,6 +410,27 @@ html.dark-mode ._4ebz,
 html.dark-mode ._2c9i ._19jt,
 html.dark-mode .uiInputLabelLabel {
 	color: var(--base-seventy) !important;
+}
+
+/* Send cash dialog background */
+html.dark-mode ._49no,
+html.dark-mode ._2z8r {
+	background-color: transparent !important;
+}
+
+/* Send cash dialog disabled */
+html.dark-mode ._3org {
+	background-color: var(--base-twenty) !important;
+}
+
+/* Send cash dialog primary text */
+html.dark-mode ._39r6 {
+	color: var(--base-seventy) !important;
+}
+
+/* Send cash dialog secondary text */
+html.dark-mode ._39r7 {
+	color: var(--base-fourty) !important;
 }
 
 /* Gif and sticker dialog: hide white triangle */
@@ -409,13 +462,13 @@ html.dark-mode ._3z53 {
 
 /* Delete popover */
 html.dark-mode ._hw2 ._53ij {
-	background-color: var(--base-ten) !important;
+	background-color: var(--base-seventy) !important;
 }
 
 /* Login tile and names */
 html.dark-mode ._5hy4,
 html.dark-mode ._3403 {
-	color: var(--base-seventy) !important;
+	color: var(--base-fourty) !important;
 }
 
 /* Login inputs */
@@ -467,4 +520,23 @@ html.dark-mode ._wu0 {
 	--code-block-base: #c5c8c6;
 	--code-block-background: #1d1f21;
 	--code-block-border: #0a0c14;
+}
+
+/* Plan dialog primary text */
+html.dark-mode ._4dx5,
+html.dark-mode ._38wl {
+	color: var(--base-seventy) !important;
+}
+
+/* Plan dialog input fields */
+html.dark-mode ._2mes._3smo ._3smp,
+html.dark-mode ._5pw9,
+html.dark-mode ._5pw6{
+	background-color: transparent !important;
+	color: var(--base-fourty) !important;
+}
+
+/* Plan dialog time selector active highlight */
+html.dark-mode ._5pw1 {
+    background: var(--base-nine);
 }
